Added styling to quick nav of design page

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body class="page-design">
+    <div class="overlay-scrim"></div>
     <div id="black-home-overlay"></div>
     <header class="site-header site-header--standard site-header--no-bg">
         <div class="container--extended">
@@ -62,7 +63,7 @@
                 </div>
             </h1>
             <a class="quickNavBtn btn--edge btn--edge--bottom-right btn--edge--f-bw">
-                <p>Quick index</p>
+                <p>List By Type</p>
             </a>
             <span class="index-scroll">
                 <span class="index-scroll__arrow"></span>
@@ -97,8 +98,8 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h4 class="card__title--main">Ma-in</h4>
-                                            <p class="card__title--sub">How to improve people's mindfulness?</p>
+                                            <h3 class="card__title--main">Ma-in</h3>
+                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
                                     </div>
@@ -114,8 +115,8 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h4 class="card__title--main">Ma-in</h4>
-                                            <p class="card__title--sub">How to improve people's mindfulness?</p>
+                                            <h3 class="card__title--main">Ma-in</h3>
+                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
                                     </div>
@@ -131,8 +132,8 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h4 class="card__title--main">Ma-in</h4>
-                                            <p class="card__title--sub">How to improve people's mindfulness?</p>
+                                            <h3 class="card__title--main">Ma-in</h3>
+                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
                                     </div>
@@ -158,8 +159,8 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h4 class="card__title--main">Ma-in</h4>
-                                            <p class="card__title--sub">How to improve people's mindfulness?</p>
+                                            <h3 class="card__title--main">Ma-in</h3>
+                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
                                     </div>
@@ -175,8 +176,8 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h4 class="card__title--main">Ma-in</h4>
-                                            <p class="card__title--sub">How to improve people's mindfulness?</p>
+                                            <h3 class="card__title--main">Ma-in</h3>
+                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
                                     </div>
@@ -192,8 +193,8 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h4 class="card__title--main">Ma-in</h4>
-                                            <p class="card__title--sub">How to improve people's mindfulness?</p>
+                                            <h3 class="card__title--main">Ma-in</h3>
+                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
                                     </div>
@@ -209,8 +210,8 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h4 class="card__title--main">Ma-in</h4>
-                                            <p class="card__title--sub">How to improve people's mindfulness?</p>
+                                            <h3 class="card__title--main">Ma-in</h3>
+                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
                                     </div>
@@ -226,8 +227,8 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h4 class="card__title--main">Ma-in</h4>
-                                            <p class="card__title--sub">How to improve people's mindfulness?</p>
+                                            <h3 class="card__title--main">Ma-in</h3>
+                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
                                     </div>
@@ -243,8 +244,8 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h4 class="card__title--main">Ma-in</h4>
-                                            <p class="card__title--sub">How to improve people's mindfulness?</p>
+                                            <h3 class="card__title--main">Ma-in</h3>
+                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
                                     </div>
@@ -270,8 +271,8 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h4 class="card__title--main">Ma-in</h4>
-                                            <p class="card__title--sub">How to improve people's mindfulness?</p>
+                                            <h3 class="card__title--main">Ma-in</h3>
+                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
                                     </div>
@@ -287,8 +288,8 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h4 class="card__title--main">Ma-in</h4>
-                                            <p class="card__title--sub">How to improve people's mindfulness?</p>
+                                            <h3 class="card__title--main">Ma-in</h3>
+                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
                                     </div>
@@ -304,8 +305,8 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h4 class="card__title--main">Ma-in</h4>
-                                            <p class="card__title--sub">How to improve people's mindfulness?</p>
+                                            <h3 class="card__title--main">Ma-in</h3>
+                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
                                     </div>
@@ -422,31 +423,113 @@
             </div>
         </div>
     </div>
+
+    <!-- Quick Nav Overlay -->
     <div class="overlay-quick-nav overlayQuickNav">
         <div class="container--extended overlay-nav__container">
-            <div class="overlay-nav__close-icon icon__close closeIconQuickNav">
+            <div class="overlay-nav__close-icon icon__close icon__close--light closeIconQuickNav">
                 <div class="icon__close--center"></div>
             </div>
-            <div class="overlay-nav__content">
-                <div class="overlay-nav__head">
-                    <p class="overlay-nav__copywords">
-                         Project List</span>
-                    </p>
-                </div>
-                <ul class="overlay-nav__list">
-                    <li class="overlay-nav__item">
-                        <a href="#" class="overlay-nav__link">project 01</a>
+            <div class="quick-nav__content">
+                <h3 class="quick-nav__heading">
+                        Design Works <span class="quick-nav__sub">by product type</span>
+                </h3>
+                <ul class="quick-nav__list">
+                    <li class="quick-nav__category">
+                        <h4 class="quick-nav__category-title">Mobile app</h4>
+                        <ul class="quick-nav__category-list">
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                        </ul>
                     </li>
-                    <li class="overlay-nav__item">
-                        <a href="#" class="overlay-nav__link">project 02</a>
+                    <li class="quick-nav__category">
+                        <h4 class="quick-nav__category-title">Web site</h4>
+                        <ul class="quick-nav__category-list">
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                        </ul>
                     </li>
-                    <li class="overlay-nav__item">
-                        <a href="#" class="overlay-nav__link">project 03</a>
+                    <li class="quick-nav__category">
+                        <h4 class="quick-nav__category-title">Promotion</h4>
+                        <ul class="quick-nav__category-list">
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="quick-nav__category">
+                        <h4 class="quick-nav__category-title">Branding & Graphics</h4>
+                        <ul class="quick-nav__category-list">
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="quick-nav__list">
+                    <li class="quick-nav__category">
+                        <h4 class="quick-nav__category-title">Mobile app</h4>
+                        <ul class="quick-nav__category-list">
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="quick-nav__category">
+                        <h4 class="quick-nav__category-title">Web site</h4>
+                        <ul class="quick-nav__category-list">
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="quick-nav__category">
+                        <h4 class="quick-nav__category-title">Promotion</h4>
+                        <ul class="quick-nav__category-list">
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="quick-nav__category">
+                        <h4 class="quick-nav__category-title">Branding & Graphics</h4>
+                        <ul class="quick-nav__category-list">
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                            <li class="quick-nav__category-list-item">
+                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
+
     <script src="./temp/scripts/App.js"></script>
 </body>
 
