Changed content of quick nav of design page

--- a/app/index.html
+++ b/app/index.html
@@ -57,13 +57,13 @@
                     <p class="hero__heading--intro">DESIGN</p>
                     <p class="hero__heading--main">Yes, I fell in love with design.</p>
                     <p class="hero__heading--sub">
-                        I've been recloseIconQuickNavborn as a designer through constant reflection on myself.
-                        I spent my 20's thinking ople don't take, and I'm standing here proudly, with a big dream, as a designer.
+                        I've been reclo seIconQ uickNavborn as a designer through constant reflection on myself.
+                        as a designer.
                     </p>
                 </div>
             </h1>
             <a class="quickNavBtn btn--edge btn--edge--bottom-right btn--edge--f-bw">
-                <p>List By Type</p>
+                <p>Prologue</p>
             </a>
             <span class="index-scroll">
                 <span class="index-scroll__arrow"></span>
@@ -74,13 +74,13 @@
             <div class="secondary-nav-container">
                 <ul class="secondary-nav__list">
                     <li class="secondary-nav__item">
-                        <a href="#design-agency" id="design-agency-link" class="secondary-nav__link">COMPANY (3)</a>
+                        <a href="#design-agency" id="design-agency-link" class="secondary-nav__link">ACADEMY</a>
                     </li>
                     <li class="secondary-nav__item">
-                        <a href="#design-academy" id="design-academy-link" class="secondary-nav__link">ACADEMY (6)</a>
+                        <a href="#design-academy" id="design-academy-link" class="secondary-nav__link">COMPANY</a>
                     </li>
                     <li class="secondary-nav__item">
-                        <a href="#design-freelance" id="design-freelance-link" class="secondary-nav__link">PERSONAL (3)</a>
+                        <a href="#design-freelance" id="design-freelance-link" class="secondary-nav__link">PERSONAL</a>
                     </li>
                 </ul>
             </div>
@@ -98,7 +98,7 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h3 class="card__title--main">Ma-in</h3>
+                                            <h3 class="card__title--main">Shinhan SoL</h3>
                                             <h4 class="card__title--sub">How to improve people's mindfulness?</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
@@ -115,25 +115,8 @@
                                 <div class="card__bottom">
                                     <div class="card__info">
                                         <div class="card__title">
-                                            <h3 class="card__title--main">Ma-in</h3>
-                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
-                                        </div>
-                                        <span class="card__meta">Mobile App</span>
-                                    </div>
-                                    <a class="card__view" href="#">view</a>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col--s-6">
-                            <a href="#" class="cards__card">
-                                <div class="card__img-container">
-                                    <img src="./assets/images/hero_03.jpg" alt="design work" class="card__img card__img--extended">
-                                </div>
-                                <div class="card__bottom">
-                                    <div class="card__info">
-                                        <div class="card__title">
-                                            <h3 class="card__title--main">Ma-in</h3>
-                                            <h4 class="card__title--sub">How to improve people's mindfulness?</p>
+                                            <h3 class="card__title--main">Miscellaneous Support</h3>
+                                            <h4 class="card__title--sub">From illustrations to banners</p>
                                         </div>
                                         <span class="card__meta">Mobile App</span>
                                     </div>
@@ -432,98 +415,31 @@
             </div>
             <div class="quick-nav__content">
                 <h3 class="quick-nav__heading">
-                        Design Works <span class="quick-nav__sub">by product type</span>
+                        Design Life Started <span class="quick-nav__sub">by product type</span>
                 </h3>
                 <ul class="quick-nav__list">
                     <li class="quick-nav__category">
-                        <h4 class="quick-nav__category-title">Mobile app</h4>
-                        <ul class="quick-nav__category-list">
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                        </ul>
+                        <h4 class="quick-nav__category-title">Academy <span class="quick-nav__category-title-sub">2017.06 ~ </span></h4>
+                        <p class="quick-nav__desc">
+                            I've been recloseIconQuickNavborn as a designer through constant reflection on myself. I spent my 20's thinking
+                            ople
+                            don't take, and I'm standing here proudly, with a big dream, as a designer.
+                        </p>
                     </li>
                     <li class="quick-nav__category">
-                        <h4 class="quick-nav__category-title">Web site</h4>
-                        <ul class="quick-nav__category-list">
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                        </ul>
+                        <h4 class="quick-nav__category-title">Agency <span class="quick-nav__category-title-sub">2018.04 ~</span></h4>
+                        <p class="quick-nav__desc">
+                            I've been recloseIconQuickNavborn as a designer through constant reflection on myself. I spent my 20's thinking
+                            ople
+                            don't take, and I'm standing here proudly, with a big dream, as a designer.
+                        </p>
                     </li>
                     <li class="quick-nav__category">
-                        <h4 class="quick-nav__category-title">Promotion</h4>
-                        <ul class="quick-nav__category-list">
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="quick-nav__category">
-                        <h4 class="quick-nav__category-title">Branding & Graphics</h4>
-                        <ul class="quick-nav__category-list">
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul class="quick-nav__list">
-                    <li class="quick-nav__category">
-                        <h4 class="quick-nav__category-title">Mobile app</h4>
-                        <ul class="quick-nav__category-list">
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="quick-nav__category">
-                        <h4 class="quick-nav__category-title">Web site</h4>
-                        <ul class="quick-nav__category-list">
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="quick-nav__category">
-                        <h4 class="quick-nav__category-title">Promotion</h4>
-                        <ul class="quick-nav__category-list">
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="quick-nav__category">
-                        <h4 class="quick-nav__category-title">Branding & Graphics</h4>
-                        <ul class="quick-nav__category-list">
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                            <li class="quick-nav__category-list-item">
-                                <a href="#" class="quick-nav__category-list-link">project XYZ</a>
-                            </li>
-                        </ul>
+                        <h4 class="quick-nav__category-title">Personal <span class="quick-nav__category-title-sub">2018.08 ~</span></h4>
+                        <p class="quick-nav__desc">
+                            I've been recloseIconQuickNavborn as a designer through constant reflection on myself. I spent my 20's thinking ople
+                            don't take, and I'm standing here proudly, with a big dream, as a designer.
+                        </p>
                     </li>
                 </ul>
             </div>
